; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_x_bignum.c_bn_secure_c2i.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_x_bignum.c_bn_secure_c2i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BN_FLG_CONSTTIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i8*, i32, i32, i8*, i32*)* @bn_secure_c2i to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bn_secure_c2i(i32** %0, i8* %1, i32 %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  store i32** %0, i32*** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load i32**, i32*** %8, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %6
  %20 = load i32**, i32*** %8, align 8
  %21 = load i32*, i32** %13, align 8
  %22 = call i32 @bn_secure_new(i32** %20, i32* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %19
  store i32 0, i32* %7, align 4
  br label %43

25:                                               ; preds = %19, %6
  %26 = load i32**, i32*** %8, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load i8*, i8** %12, align 8
  %31 = load i32*, i32** %13, align 8
  %32 = call i32 @bn_c2i(i32** %26, i8* %27, i32 %28, i32 %29, i8* %30, i32* %31)
  store i32 %32, i32* %14, align 4
  %33 = load i32, i32* %14, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %25
  store i32 0, i32* %7, align 4
  br label %43

36:                                               ; preds = %25
  %37 = load i32**, i32*** %8, align 8
  %38 = load i32*, i32** %37, align 8
  store i32* %38, i32** %15, align 8
  %39 = load i32*, i32** %15, align 8
  %40 = load i32, i32* @BN_FLG_CONSTTIME, align 4
  %41 = call i32 @BN_set_flags(i32* %39, i32 %40)
  %42 = load i32, i32* %14, align 4
  store i32 %42, i32* %7, align 4
  br label %43

43:                                               ; preds = %36, %35, %24
  %44 = load i32, i32* %7, align 4
  ret i32 %44
}

declare dso_local i32 @bn_secure_new(i32**, i32*) #1

declare dso_local i32 @bn_c2i(i32**, i8*, i32, i32, i8*, i32*) #1

declare dso_local i32 @BN_set_flags(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
